--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,47 @@
      box-sizing: border-box;
  }
 
+ // variables
+ $radius:160px;
+
  body {
      background-color: #262626;
      color: white;
+     font-family: 'Montserrat', sans-serif;
+ }
+
+ .container {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-around;
+     align-items: center;
+     width: 100%;
+     height: 100%;
+     position: fixed;
+     top: 0;
+     left: 0;
+     background: #262626;
+
+     #btn {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         width: $radius;
+         height: $radius;
+         border-radius: 50%;
+         color: black;
+         background: #fff;
+         padding: 5px;
+         border: 10px solid cyan;
+
+         .main {
+             font-size: x-large;
+             font-family: 'Raleway', sans-serif;
+         }
+
+         .description {
+             font-size: small;
+         }
+     }
  }
